--- a/clinique_app/templates/_index.html
+++ b/clinique_app/templates/_index.html
@@ -84,9 +84,10 @@
             <div class="thirdPic">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 headers-wrapper" style="position: relative; top: -190px;"><span
-                                class="section-subHeader">Наши цены </span><span
-                                class="section-header">Прайс-лист</span></div>
+                        <div class="col-12 headers-wrapper" style="position: relative; top: -190px;">
+                            <span class="section-subHeader">Наши цены </span>
+                            <span class="section-header">Прайс-лист</span>
+                        </div>
                         <div class="col-12 section-wrapper">
                             <div class="another-wrapper">
                                 <div class="price-row">
@@ -97,7 +98,8 @@
                                                 позволяют специалисту косметологу эффективно решать множество задач от
                                                 коррекции возрастных изменений и исправлений недостатков в виде формы
                                                 губ, носа, скул до борьбы с пигментными пятнами</p></div>
-                                        <span class="price-block-blue">9 000 р.</span></div>
+                                        <span class="price-block-blue">9 000 р.</span>
+                                    </div>
                                     <hr>
                                     <div class="price-wrapper">
                                         <div class="text-wrapper"><p class="colored-span">Биоревитализация</p>
@@ -107,7 +109,8 @@
                                                 эластичность и упругость. Гиалуроновая кислота синтезируется
                                                 фибробластами естественным путем, но со временем ее синтез
                                                 снижается.</p></div>
-                                        <span class="price-block-green">12 000 р.</span></div>
+                                        <span class="price-block-green">12 000 р.</span>
+                                    </div>
                                     <hr>
                                     <div class="price-wrapper">
                                         <div class="text-wrapper"><p class="colored-span">Плазмолифтинг</p>
@@ -116,7 +119,8 @@
                                                 пациента. Многие наверняка увидели здесь связь с мезотерапией. И правда:
                                                 в обоих случаях в кожу вводятся микроинъекции. Однако для мезотерапии
                                                 используются специально подобранные врачом</p></div>
-                                        <span class="price-block-blue">9 000 р.</span></div>
+                                        <span class="price-block-blue">9 000 р.</span>
+                                    </div>
                                     <hr>
                                     <div class="price-wrapper">
                                         <div class="text-wrapper"><p class="colored-span">Плазмолифтинг</p>
@@ -125,7 +129,8 @@
                                                 пациента. Многие наверняка увидели здесь связь с мезотерапией. И правда:
                                                 в обоих случаях в кожу вводятся микроинъекции. Однако для мезотерапии
                                                 используются специально подобранные врачом</p></div>
-                                        <span class="price-block-blue">9 000 р.</span></div>
+                                        <span class="price-block-blue">9 000 р.</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -139,8 +144,10 @@
             <div class="col-12 input-headers"><span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
                 <span>Индивидуально расскажем</span> <span>про каждую услугу</span></div>
             <div class="col-12 inputs-wrapper">
-                <form action=""><input type="text" placeholder="ФИО*"> <input type="text" placeholder="Телефон*"> <input
-                        type="text" placeholder="Почта">
+                <form action="">
+                    <input type="text" placeholder="ФИО*">
+                    <input type="text" placeholder="Телефон*">
+                    <input type="text" placeholder="Почта">
                     <button class="cta-button">Записаться</button>
                 </form>
                 <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
